--- a/src/scss/parts/_header.scss
+++ b/src/scss/parts/_header.scss
@@ -151,6 +151,10 @@
       }
     }
 
+    &__menu-list{
+      gap: 24px;
+    }
+
     &__action {
       display: none;
     }
